Edit Class Structure

--- a/SoftwareProject/ClassStucture/ClassStucture.vcxproj.filters
+++ b/SoftwareProject/ClassStucture/ClassStucture.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="templetes">
+      <UniqueIdentifier>{8db9ab7f-e1cd-4c6b-9382-6bdedecbed3a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Login.cpp">
@@ -62,5 +65,10 @@
     <ClInclude Include="MainMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="XMLFile.xml">
+      <Filter>templetes</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
